--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -115,7 +115,7 @@
 		<tr><td>[matchMedia max-resolution] dpi | dppx | dpcm</td><td class="c" id="mmDPI"></td></tr>
 		<tr><td>zoom %</td><td class="c" id="jsZoom"></td></tr>
 		<tr><td>devicePixelRatio</td><td class="c" id="DevPR"></td></tr>
-		<tr><td>[matchMedia -webkit- | -moz-] device-pixel-ratio</td><td class="c" id="mmDPR"></td></tr>
+		<tr><td>[matchMedia -webkit- | -moz-] device-pixel-ratio</td><td><span class="c" id="mmDPRw"></span> | <span class="c" id="mmDPRm"></span></td></tr>
 		<tr><td>[scrollY] devicePixelRatio <sup>5</sup></td><td class="c" id="devPRscrollY"></td></tr>
 		<tr><td>[clientRect] devicePixelRatio <sup>5</sup></td><td class="c" id="devPRclientRect"></td></tr>
 		<tr class="togOS1"><td colspan="2" class="center">--- android ---</td></tr>
