--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -101,7 +101,7 @@
 			<div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">will attempt to open a new<br>window as big as possible<br>and grab the dimensions</span></div>
 			&nbsp new window</td><td class="c" id="newWinLeak"></td></tr>
-		<tr class="togOS1"><td>[android] new window</td><td class="c" id="droidWin"></td></tr>
+		<tr class="togOS1"><td>[android] new window</td><td id="droidWin"></td></tr>
 		<tr><td>private window</td><td class="c" id="IsPBMode"></td></tr>
 		<tr><td>[screen] orientation | mozOrientation | angle</td><td class="c" id="ScrOrient"></td></tr>
 		<tr><td>[css] orientation | aspect-ratio | device-aspect-ratio</td>
