--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -449,7 +449,7 @@
 			&nbsp speech synthesis</td><td class="c" id="speechSynth"></td></tr>
 		<tr><td>speech engines</td><td class="c" id="speechEngines"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
-			<span class="ttxt">maxTouchPoints<br>ontouchstart<br>ontouchend<br>TouchEvent</span>
+			<span class="ttxt">maxTouchPoints<br>-moz-touch-enabled<br>ontouchstart<br>ontouchend<br>TouchEvent</span>
 			</div>&nbsp touch</td><td class="c" id="touch1"></td></tr>
 		<tr><td colspan="2" class="center">------</td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
