--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -104,10 +104,9 @@
 		<tr class="togOS1"><td>[android] new window</td><td id="droidWin"></td></tr>
 		<tr><td>private window</td><td class="c" id="IsPBMode"></td></tr>
 		<tr><td>[screen] orientation | mozOrientation | angle</td><td class="c" id="ScrOrient"></td></tr>
-		<tr><td>[css] orientation | aspect-ratio | device-aspect-ratio</td>
-			<td><span id="cssO"></span> | <span id="cssAR"></span> | <span id="cssDAR"></span></td></tr>
-		<tr><td>[matchMedia] orientation | aspect-ratio | device-aspect-ratio</td>
-			<td><span class="c" id="mmO"></span> | <span class="c" id="mmAR"></span> | <span class="c" id="mmDAR"></span></td></tr>
+		<tr><td>[css] -moz- | orientation | aspect-ratio | device-aspect-ratio</td>
+			<td><span id="cssOm"></span> | <span id="cssO"></span> | <span id="cssAR"></span> | <span id="cssDAR"></span></td></tr>
+		<tr><td>[matchMedia] -moz- | orientation | aspect-ratio | device-aspect-ratio</td><td class="c" id="mmO"></tr>
 		<tr><td>[screen] pixel depth | color depth</td><td class="c" id="ScrColor"></td></tr>
 		<tr><td>[css | matchMedia] color</td><td><span id="cssC"></span> | <span class="c" id="mmC"></span></td></tr>
 		<tr><td>dpi</td><td class="c" id="jsDPI"></td ></tr>
