--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -787,6 +787,9 @@
 			<span class="ttxtb">dom.media.mediasession.enabled</span></div>
 			&nbsp [api] mediaSession</td><td class="c" id="mediaSession"></td></tr>
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
+			<span class="ttxt">dom.reporting.enabled<br></span></div>
+			&nbsp [api] reporting</td><td class="c" id="reportingAPI"></td></tr>
+		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">dom.requestIdleCallback.enabled</span></div>
 			&nbsp requestIdleCallback</td><td class="c" id="reqIdleCB"></td></tr>
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
