--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -30,6 +30,7 @@
 		</div>
 		<div id="drect"></div>
 		<div id="svgDiv"></div>
+		<div><textarea id="tScroll" rows="4" cols="3" style='border: 0px'>Fox in socks on box on Knox</textarea></div>
 	</div>
 	<!-- hidden -->
 	<div class="hidden">
@@ -183,7 +184,8 @@
 			<span style="font-family: Lucida Grande, ABR;">Mac</span>
 			<span style="font-family: Segoe UI, ABR;">Windows</span></td></tr>
 		<tr><td>[css line-height] os</td><td class="c" id="cssLH"></td></tr>
-		<tr><td>[scrollbar width] os <sup>2, 3</sup></td><td class="c" id="scrollbarWidth"></td></tr>
+		<tr><td>[viewport scrollbar width] os <sup>2, 3</sup></td><td class="c" id="vScroll"></td></tr>
+		<tr><td>[element scrollbar width] os</td><td id="eScroll"></td></tr>
 		<tr><td>[tcp/ip] os</td><td></td></tr>
 		<tr><td>[widgets] os</td><td class="c" id="widgetOS"></td></tr>
 		<tr><td colspan="2" class="showhide">
