--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -38,6 +38,7 @@
 		<div id="test73"></div>
 		<span id="sColorElement"></span>
 		<img id="branding" src="chrome://branding/content/about-wordmark.svg"></img>
+		<div id="dprdroid" style="border: 0.1px solid;">Foo</div>
 		<div>
 			<input type="reset" value="" id="widget1">
 			<input type="checkbox" id="widget2">
@@ -114,7 +115,7 @@
 		<tr><td>[css min-resolution] dpi</td><td id="P"></td></tr>
 		<tr><td>[matchMedia max-resolution] dpi | dppx | dpcm</td><td class="c" id="mmDPI"></td></tr>
 		<tr><td>zoom %</td><td class="c" id="jsZoom"></td></tr>
-		<tr><td>devicePixelRatio</td><td class="c" id="DevPR"></td></tr>
+		<tr><td>devicePixelRatio</td><td class="c" id="dpr"></td></tr>
 		<tr><td>[matchMedia -webkit- | -moz-] device-pixel-ratio</td><td><span class="c" id="mmDPRw"></span> | <span class="c" id="mmDPRm"></span></td></tr>
 		<tr><td>[scrollY] devicePixelRatio <sup>5</sup></td><td class="c" id="devPRscrollY"></td></tr>
 		<tr><td>[clientRect] devicePixelRatio <sup>5</sup></td><td class="c" id="devPRclientRect"></td></tr>
