--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -292,7 +292,7 @@
 			<tr class="togL"><td>[resolvedOptions] timezone</td><td class="c" id="tz2"></td></tr>
 		<!--dtf-->
 		<tr class="togL"><td></td><td class="sub4">date/time & format</td></tr>
-			<tr class="togL"><td>system date/time</td><td class="c" id="dtf1"></td></tr>
+			<tr class="togL"><td>date/time</td><td class="c" id="dtf1"></td></tr>
 			<tr class="togL"><td>toString</td><td class="c" id="dtf2"></td></tr>
 			<tr class="togL"><td>[long] toLocaleString</td><td class="c" id="dtf3"></td></tr>
 			<tr class="togL"><td>[long] toLocaleDateString</td><td class="c" id="dtf4"></td></tr>
