--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -30,7 +30,7 @@
 		</div>
 		<div id="drect"></div>
 		<div id="svgDiv"></div>
-		<div><textarea id="tScroll" rows="4" cols="3" style='border: 0px'>Fox in socks on box on Knox</textarea></div>
+		<div id="tScroll" style="width: 100px; height: 50px; border: 0px; overflow-y: scroll;"></div>
 	</div>
 	<!-- hidden -->
 	<div class="hidden">
