--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -582,8 +582,7 @@
 		<tr><td colspan="2" class="center">------</td></tr>
 		<tr><td>
 			<div class="btn-left"><button class="btn10" onClick="outputSection(`10`, `c2`, `m`)">[ run tests ]</button></div>
-			<div>outputLatency <sup>2</sup></div></td><td class="c2 mono" id="audioLatency"></td></tr>
-		<tr><td>audioContext <sup>2</sup></td><td class="c2 mono" id="audio1hash"></td></tr>
+			<div>audioContext <sup>2</sup></div></td><td class="c2 mono" id="audio1hash"></td></tr>
 		<tr><td>OscillatorNode <sup>2</sup></td><td class="c2 mono" id="audio2hash"></td></tr>
 		<tr><td>OscillatorNode/DynamicsCompressor <sup>2</sup></td><td class="c2 mono" id="audio3hash"></td></tr>
 		<tr><td colspan="2" class="showhide">
