--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<meta name="viewport" content="width=1000">
+	<!--<meta name="viewport" content="width=1024">-->
 	<title>TorZillaPrint</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<style id="test73">
