--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -618,6 +618,7 @@
 			<div class="btn-left"><button class="btn11" onClick="outputSection(`11`, `c1`, `m`)">[ re-run tests ]</button></div>
 			<div>default proportional font</div></div></td><td class="c1" id="fontFCprop"></td></tr>
 		<tr><td colspan="2">default font sizes</td><td class="c1" id="fontFCsize"></td></tr>
+		<tr><td colspan="2">default font measurements</td><td class="c1 mono" id="fontFCmeasure"></td></tr>
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtx">layout.css.font-loading-api.enabled</span></div>
 			&nbsp css font loading api</td><td class="c1" id="fontCSS"></td></tr>
