--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -167,6 +167,7 @@
 		<tr><td colspan="2" class="center">--- browser, version, os ---</td></tr>
 		<tr class="togOS2"><td>[css] branding</td><td id="fdBrandingCss"></td></tr>
 		<tr><td>[css] browser</td><td id="fdResourceCss"></td></tr>
+		<tr><td>[collation] browser</td><td class="c" id="fdCollation"></td></tr>
 		<tr><td>[error messages] browser</td><td class="c" id="fdError"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt"><b>mozInnerScreenX:</b><br>we could also use<br>mozGetAsFile<br>mozScreenX<br>oscpu
