--- a/extra.html
+++ b/extra.html
@@ -9,10 +9,22 @@
 </head>
 
 <body>
+	<!-- offscreen -->
+	<div class="offscreen">
+		<span id="fontFBTest" style='white-space: nowrap; font-family: fontFallback;'></span>
+		<img id="imageTest" src="">
+	</div>
+	<!-- hidden -->
+	<div class="hidden">
+		<div>
+			<iframe id="iframeTest"></iframe>
+			<form><input id="appLang_1" required="" type="text"></form>
+			<iframe id="appLang_2"></iframe>
+			<iframe id="appLang_3"></iframe>
+			<iframe id="appLang_4"></iframe>
+		</div>
+	</div>
 
-	<!-- non-displayed elements -->
-	<!-- font fallback -->
-	<div class="offscreen"><span id="fontFBTest" style='white-space: nowrap; font-family: fontFallback;'></span></div>
 
 	<table>
 		<tr><td><a anchor="top"><h2>TorZillaPrint: Extra Tests</h2></td></tr>
@@ -64,15 +76,37 @@
 			<a target="_blank" class="blue" href="https://privacycheck.sec.lrz.de/index.html">privacycheck.sec.lrz.de</a></td></tr>
 	</table>
 
-	<!-- TABLE 4: chrome:// -->
+	<!-- TABLE 3: app lang -->
 	<table id="tb4">
+		<col width="37%"></a><col width="63%">
+		<thead><tr><th colspan="2">application language</th></tr></thead>
+		<tr><td><div>
+			<div class="btn-left"><button class="btn4" onClick="outputSection(`4`, `c2`, `e`)">[ run tests ]</button></div>
+			<div>dtd <sup>1</sup></div></div></td><td class="c2" id="appLang2"></td></tr>
+		<tr><td>dtd nullprinciple <sup>2</sup></td><td class="c2" id="appLang3"></td></tr>
+		<tr><td>dom.properties <sup>3</sup></td><td class="c2" id="appLang1"></td></tr>
+		<tr><td>MediaDocument.properties <sup>3</sup></td><td class="c2" id="appLang4"></td></tr>
+		<tr><td>xmlparser.properties <sup>3</sup></td><td class="c2" id="appLang5"></td></tr>
+		<tr><td colspan="2"></td></tr>
+		<!--credits-->
+		<tr><td colspan="2"><span class="no_color">app language code based on work by Alex Catarineu </span>
+			<a target="_blank" class="blue" href="https://acatarineu.github.io/fp/locale.html">here</a> <sup>1</sup>
+			<span class="no_color"> and </span>
+			<a target="_blank" class="blue" href="https://acatarineu.github.io/fp/locale_nullprincipal.html">here</a> <sup>2</sup>
+			<span class="no_color"> and </span>
+			<a target="_blank" class="blue" href="https://trac.torproject.org/projects/tor/ticket/30683">z3t on HackerOne</a> <sup>3</sup>
+			</td></tr>
+
+
+	<!-- TABLE 4: chrome:// -->
+	<table id="tb5">
 		<col width="1%"><col width="36%"><col width="63%">
 		<thead><tr><th colspan="3">monsta font list</th></tr></thead>
 		<tr><td colspan="3" class="intro"><span class="no_color">This is to show that without mitigation measures, font entropy is
 			high: The list linked below, will include os lists, whitelists, and some unique fonts bundled with popular applications.
 			In reality a much smaller list can be used without sacrificing much entropy.</span>
 		</td></tr>
-		<tr><td colspan="2"><div><div class="btn-left"><button class="btn4" onClick="outputSection(`4`, `c`, `e`)">[ run monsta tests ]</button></div>
+		<tr><td colspan="2"><div><div class="btn-left"><button class="btn5" onClick="outputSection(`5`, `c`, `e`)">[ run monsta tests ]</button></div>
 			<div>font list</div></div></td>
 			<td class="mono" id="monsta_fontList"><span class="no_color">
 			<a href="txt/fonts_monsta.txt" target='blank' class='blue'>fonts_monsta<a></span></td></tr>
@@ -98,11 +132,11 @@
 		</td></tr>
 	</table>
 
-
 	<br>
 	<script src="js/main.js"></script>
-	<script src="js/widgets.js"></script>
-	<script src="js/chrome.js"></script>
+	<script src="jsextra/widgets.js"></script>
+	<script src="jsextra/chrome.js"></script>
+	<script src="jsextra/language.js"></script>
 	<script src="js/fonts.js"></script>
 
 </body>
