--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -153,6 +153,7 @@
 			<div class="btn-left"><button class="btn2" onClick="outputSection(`2`, `c`, `m`)">[ re-run tests ]</button></div>
 			<div>[header] http_user_agent</div></div></td><td></td>
 		</tr>
+		<tr><td>user agent hash</td><td class="c mono" id="sectionUA1"></td></tr>
 		<tr><td>[navigator] userAgent</td><td class="c" id="nUserAgent"></td></tr>
 		<tr><td>appCodeName</td><td class="c" id="nCodeName"></td></tr>
 		<tr><td>appName</td><td class="c" id="nAppName"></td></tr>
@@ -164,8 +165,8 @@
 		<tr><td>productSub</td><td class="c" id="nProductSub"></td></tr>
 		<tr><td colspan="2" class="center">--- browser, version, os ---</td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
-			 <span class="ttxt">from some stable<br>items below</span></div>
-			 &nbsp [feature detection] hash</td><td class="c mono" id="sectionUA"></td></tr>
+			 <span class="ttxt">uses stable feature<br>detection results</span></div>
+			 &nbsp user agent hash</td><td class="c mono" id="sectionUA2"></td></tr>
 		<tr><td>[css] branding</td><td id="fdBrandingCss"></td></tr>
 		<tr><td>[css] browser</td><td id="fdResourceCss"></td></tr>
 		<tr><td>[collation] browser</td><td class="c" id="fdCollation"></td></tr>
