--- a/extra.html
+++ b/extra.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>TorZillaPrint: Extra Tests</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<script src="js/generic.js"></script>
@@ -25,29 +25,33 @@
 		</div>
 	</div>
 
-
 	<table>
 		<tr><td><a anchor="top"><h2>TorZillaPrint: Extra Tests</h2></td></tr>
 		<tr><td class="blurb"><a class="blue" href="TorZillaPrint.html">return to the main test</a></td></tr>
 	</table>
 
+	<!-- resource:// -->
 	<table id="tb2">
 		<col width="37%"></a><col width="63%">
-		<thead><tr><th colspan="2">widgets / form controls</div></th></tr></thead>
+		<thead><tr><th colspan="2">[tor browser] chrome:// & resource://</th></tr></thead>
 		<tr><td><div>
-				<div class="btn-left"><button class="btn2" onClick="outputSection(`2`, `c`, `e`)">[ re-run tests ]</button></div>
-				<div>one</div></div></td><td></td></tr>
-		<tr><td>two</td><td></td></tr>
+				<div class="btn-left"><button class="btn2" id="resourceRun" onClick="outputSection(`2`, `c`, `e`)">[ run tests ]</button></div>
+				<div>images</div></div></td>
+			<td class="c mono" id="imgHashR"></td></tr>
+		<tr><td>js</td><td class="c mono" id="jsHashR"></td></tr>
+		<tr><td>css</td><td class="c mono" id="cssHashR"></td></tr>
+		<tr><td>combined</td></td><td class="c mono" id="allHashR"></td></tr>
 		<tr><td colspan="2" class="showhide">
-				<input id="collapseW" class="toggle" type="checkbox" checked onchange="toggleitems(this, `W`)">
-				<label for="collapseW" class="lbl-toggle" id="labelW">&#9660; show details</label>
+				<input id="collapseR" class="toggle" type="checkbox" checked onchange="toggleitems(this, `R`)">
+				<label for="collapseR" class="lbl-toggle" id="labelR">&#9660; show details</label>
 		</td></tr>
-		<tr class="togW"><td>one</td><td></td></tr>
-		<tr class="togW"><td>two</td><td></td></tr>
-		<tr class="togW"><td colspan="2"></td></tr>
+		<tr class="togR">
+		 <td><button class="btn0" onClick="copyclip(`allLoadedR`)">[ copy to clipboard ]</button>results</td>
+		 <td class="c" id="allLoadedR"></td>
+		</tr>
 	</table>
 
-	<!-- TABLE 3: chrome:// -->
+	<!-- chrome:// -->
 	<table id="tb3">
 		<col width="37%"></a><col width="63%">
 		<thead><tr><th colspan="2">chrome://</th></tr></thead>
@@ -76,7 +80,7 @@
 			<a target="_blank" class="blue" href="https://privacycheck.sec.lrz.de/index.html">privacycheck.sec.lrz.de</a></td></tr>
 	</table>
 
-	<!-- TABLE 3: app lang -->
+	<!-- app lang -->
 	<table id="tb4">
 		<col width="37%"></a><col width="63%">
 		<thead><tr><th colspan="2">application language</th></tr></thead>
@@ -97,8 +101,7 @@
 			<a target="_blank" class="blue" href="https://trac.torproject.org/projects/tor/ticket/30683">z3t on HackerOne</a> <sup>3</sup>
 			</td></tr>
 
-
-	<!-- TABLE 4: chrome:// -->
+	<!-- fonts -->
 	<table id="tb5">
 		<col width="1%"><col width="36%"><col width="63%">
 		<thead><tr><th colspan="3">monsta font list</th></tr></thead>
@@ -132,11 +135,28 @@
 		</td></tr>
 	</table>
 
+	<table id="tb6">
+		<col width="37%"></a><col width="63%">
+		<thead><tr><th colspan="2">widgets / form controls</div></th></tr></thead>
+		<tr><td><div>
+				<div class="btn-left"><button class="btn6" onClick="outputSection(`6`, `c`, `e`)">[ re-run tests ]</button></div>
+				<div>one</div></div></td><td></td></tr>
+		<tr><td>two</td><td></td></tr>
+		<tr><td colspan="2" class="showhide">
+				<input id="collapseW" class="toggle" type="checkbox" checked onchange="toggleitems(this, `W`)">
+				<label for="collapseW" class="lbl-toggle" id="labelW">&#9660; show details</label>
+		</td></tr>
+		<tr class="togW"><td>one</td><td></td></tr>
+		<tr class="togW"><td>two</td><td></td></tr>
+		<tr class="togW"><td colspan="2"></td></tr>
+	</table>
+
 	<br>
 	<script src="js/main.js"></script>
 	<script src="jsextra/widgets.js"></script>
 	<script src="jsextra/chrome.js"></script>
 	<script src="jsextra/language.js"></script>
+	<script src="jsextra/resource.js"></script>
 	<script src="js/fonts.js"></script>
 
 </body>
