--- a/newwin.html
+++ b/newwin.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>i'm a new window</title>
 <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 <br><br><center><p>Hey! You're here because you tested what a new window malicious size could leak.</p>
-<p>Close this and check the results on the main test.</p></center><br><br>
+<p>Close this and refer back to the results on the main test.</p></center><br><br>
 </body>
 </html>
