--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -273,7 +273,7 @@
 		</td></tr>
 		<!--lang-->
 		<tr class="togL"><td></td><td class="sub4">language & locale</td></tr>
-			<tr class="togL"><td>http_accept_language</td><td class="c" id="lang0"></td></tr>
+			<tr class="togL"><td>http_accept_language</td><td class="notcoded" id="lang0"></td></tr>
 			<tr class="togL"><td>languages</td><td class="c" id="lang1"></td></tr>
 			<tr class="togL"><td>language</td><td class="c" id="lang2"></td></tr>
 			<tr class="togL"><td>languages[0]</td><td class="c" id="lang3"></td></tr>
@@ -671,7 +671,7 @@
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn13" onClick="outputSection(`13`, `c`, `m`)">[ re-run tests ]</button></div>
-			<div>webgl 1</div></div></td><td class="c notcoded" id="webgl1"></td></tr>
+			<div>webgl 1</div></div></td><td class="notcoded" id="webgl1"></td></tr>
 		<tr><td>webgl 2</td><td class="notcoded" id="webgl2"></td></tr>
 	</table>
 
