--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -140,7 +140,7 @@
 		</td></tr>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn2" onClick="outputSection(`2`, `c`, `m`)">[ re-run tests ]</button></div>
-			<div>[header] http_user_agent</div></div></td><td class="notcoded"></td>
+			<div>[header] http_user_agent</div></div></td><td class="faint"></td>
 		</tr>
 		<tr><td>hash</td><td class="c mono" id="sectionUA1"></td></tr>
 		<tr><td><button class="btn0" onClick="goNW_UA()">[ click here ]</button>
@@ -272,7 +272,7 @@
 		</td></tr>
 		<!--lang-->
 		<tr class="togL"><td></td><td class="sub4">language & locale</td></tr>
-			<tr class="togL"><td>http_accept_language</td><td class="notcoded" id="lang0"></td></tr>
+			<tr class="togL"><td>http_accept_language</td><td class="faint" id="lang0"></td></tr>
 			<tr class="togL"><td>languages</td><td class="c" id="lang1"></td></tr>
 			<tr class="togL"><td>language</td><td class="c" id="lang2"></td></tr>
 			<tr class="togL"><td>languages[0]</td><td class="c" id="lang3"></td></tr>
@@ -337,11 +337,11 @@
 		<tr><td>[navigator] onLine</td><td class="c" id="nOnLine"></td></tr>
 		<tr><td colspan="2" class="center">------</td></tr>
 		<!--<tr><td>ToDo: [names + values + order] hash</td><td></td></tr>-->
-		<tr><td>http_accept</td><td class="notcoded"></td></tr>
-		<tr><td>http_accept_encoding</td><td class="notcoded"></td></tr>
-		<tr><td>http_dnt</td><td class="notcoded"></td></tr>
-		<tr><td>http_upgrade_insecure_requests</td><td class="notcoded"></td></tr>
-		<tr><td>server_protocol</td><td class="notcoded"></td></tr>
+		<tr><td>http_accept</td><td class="faint"></td></tr>
+		<tr><td>http_accept_encoding</td><td class="faint"></td></tr>
+		<tr><td>http_dnt</td><td class="faint"></td></tr>
+		<tr><td>http_upgrade_insecure_requests</td><td class="faint"></td></tr>
+		<tr><td>server_protocol</td><td class="faint"></td></tr>
 	</table>
 
 	<!-- cookies.js -->
@@ -670,8 +670,8 @@
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn13" onClick="outputSection(`13`, `c`, `m`)">[ re-run tests ]</button></div>
-			<div>webgl 1</div></div></td><td class="notcoded" id="webgl1"></td></tr>
-		<tr><td>webgl 2</td><td class="notcoded" id="webgl2"></td></tr>
+			<div>webgl 1</div></div></td><td class="faint" id="webgl1"></td></tr>
+		<tr><td>webgl 2</td><td class="faint" id="webgl2"></td></tr>
 	</table>
 
 	<!-- css.js -->
