--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -74,10 +74,10 @@
 			<div><div class="ttip"><span class="icon">[ i ]</span><span class="ttxt">range 500-2560</span></div>
 			&nbsp [css min-device-] screen resolution <sup>1</sup></div></div></td><td id="S"></td></tr>
 		<tr><td>[matchMedia] screen resolution <sup>2</sup></td><td class="c" id="ScrMM"></td></tr>
-		<tr><td>screen resolution <span class="group">*</span></td><td><span class="c" id="ScrRes"></span><span id="match"></span></td></tr>
-		<tr><td>available resolution <span class="group">*</span></td><td class="c" id="ScrAvail"></td></tr>
-		<tr><td>outer window <span class="group">*</span></td><td class="c" id="WndOut"></td></tr>
-		<tr><td>inner window <span class="group">*</span></td><td class="c" id="WndIn"></td></tr>
+		<tr><td>screen resolution <span class="group"> &#9679 </span></td><td><span class="c" id="ScrRes"></span><span id="match"></span></td></tr>
+		<tr><td>available resolution <span class="group"> &#9679 </span></td><td class="c" id="ScrAvail"></td></tr>
+		<tr><td>outer window <span class="group"> &#9679 </span></td><td class="c" id="WndOut"></td></tr>
+		<tr><td>inner window <span class="group"> &#9679 </span></td><td class="c" id="WndIn"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt">range 500-2560</span></div>
 			&nbsp [css min-] inner window <sup>1, 3</sup></td><td id="D"></td></tr>
@@ -647,7 +647,7 @@
 
 	<!-- media.js -->
 	<table id="tb12">
-		<col width="50%"><a name="media"></a><col width="50%">
+		<col width="37%"><a name="media"></a><col width="63%">
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#media">Media</a>
 			<div class="nav-up"><a href="#fonts">&#9650;</a></div>
@@ -762,6 +762,9 @@
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt">svg.disabled</span></div>
 			&nbsp svg</td><td class="c" id="svgBasicTest"></td></tr>
+		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
+			<span class="ttxt"><b>basic test</b> using<br>performance.now()</span></div>
+			&nbsp timing</td><td class="c" id="rfpperf"></td></tr>
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">javascript.options.wasm</span></div>
 			&nbsp webassembly</td><td class="c" id="wasm"></td></tr>
